# SteelSurfaceImageDefectDetectionDemo

./: .gitignore  README.md
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/config/: machine.example.yaml  platform.example.yaml  platform.portable.example.yaml  project.example.yaml
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/delivery/: demo-package-index.json  steel-platform-demo-1.0.0.zip.sha256
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/docs/: AI_WORKFLOW_PLATFORM_IMPLEMENTATION_REVIEW.md  BEGINNER_INSTALLATION_GUIDE.md  NEXT_STAGE_MODEL_ITERATION_GUIDE.md  PORTABLE_DELIVERY_GUIDE.md  PROJECT_PROGRESS_AND_PLATFORM_RETROSPECTIVE.md  REPRODUCIBILITY_ACCEPTANCE_TEMPLATE.md
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/requirements/: locks.sha256.json  platform-win-py311.lock.txt  yolo-common-win-py311.lock.txt  yolo-cpu-win-py311.lock.txt  yolo-cuda121-win-py311.lock.txt
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/scripts/: bootstrap.ps1  configure.ps1  doctor.ps1  start.ps1
AI/ImageDefectDetectionDemo/yolov13-main/steel_platform/tests/: test_annotation_maintenance.py  test_annotation_work_orders_api.py  test_architecture_and_maintenance.py  test_cli_and_ui.py  test_cli_resource_commands.py  test_cloud_ui_contract.py  test_database_bootstrap.py  test_delivery_package.py  test_doctor.py  test_domain_core.py  test_import_workflow.py  test_inference_runner.py  test_platform_p1_ui_contract.py  (+19 more)
(+152 files in other folders)
