[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-vision-platform"
version = "0.1.0"
description = "钢材表面异常视觉系统本地Demo平台"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10,<3",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
web = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]
dev = ["pytest>=8,<10", "httpx>=0.27,<1", "hypothesis>=6,<7"]

[project.scripts]
steel-platform = "steel_platform.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"steel_platform.interfaces" = ["static/*.html", "static/*.css", "static/*.js", "static/js/*.js"]
"steel_platform.infrastructure" = ["migrations/*.py", "migrations/*.mako", "migrations/versions/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
